# vade-universal-resolver

./: .gitlab-ci.yml  Cargo.toml  README.md  VERSIONS.md  build.rs
src/: in3_request_list.rs  lib.rs  main.rs  vade_universal_resolver.rs
