[package]
name = "vade-universal-resolver"
version = "0.1.0"
authors = ["Blockchains Inc"]
edition = "2018"

[lib]
name = "vade_universal_resolver"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.31"
env_logger = "0.7.1"
regex = { version = "1.3.7" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vade = { path = "../vade", version = "0.0.8" }

[dev-dependencies]
tokio = { version = "0.2.21", features = ["macros", "rt-threaded"] }
