[package]
name = "vade-universal-resolver"
version = "0.0.1"
authors = ["evan GmbH"]
edition = "2018"
license-file = "LICENSE.txt"
description = "universal resolver plugin for vade"
readme = "README.md"
keywords = ["did", "ssi"]

[lib]
name = "vade_universal_resolver"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.31"
env_logger = "0.7.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vade = { path = "../vade", version = "0.1.0" }

[dev-dependencies]
tokio = { version = "=1.7.1", features = ["macros", "rt-multi-thread"] }
